--- a/nativescript/App_Resources/Android/app.gradle
+++ b/nativescript/App_Resources/Android/app.gradle
@@ -8,7 +8,7 @@
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "__PACKAGE__"  
+    applicationId = "com.climbing.guide.ns.client"  
   }  
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
