--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "angular-native-seed",
+    "name": "climbing-guide-angular-client",
     "version": "0.0.0",
+    "repository": "https://github.com/lyuboasenov/climbing-guide-apps.git",
     "scripts": {
         "postinstall": "node symlink.js",
         "ng": "ng",
@@ -30,7 +31,7 @@
     },
     "devDependencies": {
         "@angular-devkit/core": "^0.4.6",
-        "@angular/cli": "1.6.1",
+        "@angular/cli": "6.0.8",
         "@angular/compiler-cli": "^5.0.0",
         "@angular/language-service": "^5.0.0",
         "@types/jasmine": "~2.5.53",
@@ -48,6 +49,7 @@
         "protractor": "~5.1.2",
         "ts-node": "~3.2.0",
         "tslint": "~5.7.0",
-        "typescript": "~2.4.2"
+        "typescript": "~2.4.2",
+        "@angular-devkit/build-angular": "~0.6.8"
     }
 }
