--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -8,7 +8,7 @@
       "version": "3.1.0"
     },
     "tns-android": {
-      "version": "4.2.0-2018-06-18-02"
+      "version": "4.2.0"
     }
   },
   "dependencies": {
@@ -24,10 +24,12 @@
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
     "nativescript-angular": "^5.2.0",
+    "nativescript-svg": "^1.3.7",
     "nativescript-theme-core": "~1.0.4",
+    "nativescript-ui-sidedrawer": "^4.3.0",
     "reflect-metadata": "~0.1.8",
     "rxjs": "^5.5.0",
-    "tns-core-modules": "^4.2.0-2018-06-25-01",
+    "tns-core-modules": "^4.2.0",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
