--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "2.0.1",
     "nativescript-angular": "^5.2.0",
     "nativescript-google-maps-sdk": "^2.6.1",
+    "nativescript-localstorage": "^2.0.0",
     "nativescript-svg": "^1.3.7",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-sidedrawer": "^4.3.0",
