--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~5.2.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
+    "Buffer": "0.0.0",
     "nativescript-angular": "^5.2.0",
     "nativescript-google-maps-sdk": "^2.6.1",
     "nativescript-localstorage": "^2.0.0",
